2015-10-30  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Implemented decoding mode page 0Bh.

2015-10-30  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Typo

2015-10-30  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Implemented decoding mode page 03h.

2015-10-29  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Implemented decoding mode page 05h.

2015-10-29  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Implemented decoding mode page 08h.

2015-10-25  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Implemented decoding mode page 02h.

2015-10-25  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Implemented decoding mode page 0Ah.

2015-10-25  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Added method for decoding MODE SENSE(10) response.

2015-10-25  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Added information from SCSI-3 SBC-1.

2015-10-24  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Added header information from SCSI-2.

2015-10-24  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	* DiscImageChef.Decoders.csproj:
	  Implement SCSI-1 Mode Page decoding.

2015-10-23  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Enums.cs:
	* SCSI/Inquiry.cs:
	  Added information from ECMA-111.

2015-10-19  Natalia Portillo  <claunia@claunia.com>

	* SCSI/EVPD.cs:
	* DiscImageChef.Decoders.csproj:
	  Implemented SCSI VPDs 0x00 to 0x80.

2015-10-19  Natalia Portillo  <claunia@claunia.com>

	* ATA/Identify.cs:
	  Remove unused code.

2015-10-19  Natalia Portillo  <claunia@claunia.com>

	* ATA/ATA.cs:
	* ATA/Identify.cs:
	* DiscImageChef.Decoders.csproj:
	  Rename fields, methods and structs to more adequate names.

2015-10-19  Natalia Portillo  <claunia@claunia.com>

	* ATA/ATA.cs:
	  Rename SCSI decoders fields, methods and structs to more
	  adequate names.

	* SCSI/MMC/MMC.cs:
	* DiscImageChef.Decoders.csproj: